--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+# LOCAL SETTINGs
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.username=
+spring.redis.password=
+spring.redis.client.type=jedis
