--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.redis.port=${REDISPORT}
 spring.redis.username=${REDISUSER}
 spring.redis.password=${REDISPASSWORD}
 spring.redis.client.type=jedis
+
+# # local
+# spring.redis.host=localhost
+# spring.redis.port=6379
+# spring.redis.username=
+# spring.redis.password=
+# spring.redis.client.type=jedis
